spacing fixes

--- a/static/css/multiplayer.css
+++ b/static/css/multiplayer.css
@@ -11,14 +11,18 @@
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    top: 1em;
     width: 18em;
-    z-index: -1;
 }
 #current-timer{
     background-color: #93b675;
     height: 2em;
 }
+#shrimp-div-down{
+    position: relative;
+    top: 1em;
+    z-index: -1;
+}
+
 .other-row{
     text-align: center;
     justify-content: center;
